Fix 'Crash when copying actor of use case to collaboration diagram'.

The crash happened by accessing deleted widgets in the scene widget list; the bug
is fixed by excluding invalid uml objects and widget in UMLDragData::decodeClip4()
before any widget is added to the scene.

BUG:345571